<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/background_color">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:layout_marginTop="@dimen/title_margin_top"
            android:id="@+id/title"
            android:text="@string/title"
            android:textSize="@dimen/title_txt_size"
            android:textColor="@color/txt_color"
            android:layout_gravity="center"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/slogan"
            android:text="@string/slogan"
            android:textStyle="italic"
            android:textColor="@color/txt_color"
            android:layout_gravity="center"/>

        <ImageView
            android:layout_width="200dp"
            android:layout_height="150dp"
            android:scaleType="centerCrop"
            android:layout_gravity="center"
            android:id="@+id/cover_photo"
            android:src="@drawable/cat"/>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!-- Address of the Business -->
            <ImageView
                android:id="@+id/img_location_on_white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/InfoImg"
                android:src="@drawable/ic_location_on_black_24px" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/location"
                android:text="@string/location"
                style="@style/InfoTxt"
                android:layout_toRightOf="@id/img_location_on_white"
                android:onClick="openMap"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!-- Phone of the Business -->
            <ImageView
                android:id="@+id/img_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/InfoImg"
                android:src="@drawable/ic_phone_black_24px" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/phone"
                android:text="@string/phone"
                style="@style/InfoTxt"
                android:layout_toRightOf="@id/img_phone"
                android:onClick="openMap"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!-- Email of the Business -->
            <ImageView
                android:id="@+id/img_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/InfoImg"
                android:src="@drawable/ic_mail_outline_black_24px" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/email"
                android:text="@string/email"
                style="@style/InfoTxt"
                android:layout_toRightOf="@id/img_email"
                android:onClick="openMap"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!-- Website of the Business -->
            <ImageView
                android:id="@+id/img_website"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/InfoImg"
                android:src="@drawable/ic_grid_world" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/site"
                android:text="@string/site"
                style="@style/InfoTxt"
                android:layout_toRightOf="@id/img_website"
                android:onClick="openMap"/>
        </RelativeLayout>


    </LinearLayout>
</ScrollView>
